# vibechess

./: Cargo.toml  build.rs
docs/: build.sh  index.html  worker.js
docs/pkg/: chess.d.ts  chess.js  chess_bg.wasm  chess_bg.wasm.d.ts  package.json
src/: board.rs  engine.rs  lib.rs  moves.rs  piece.rs  wasm_api.rs
web/: build.sh  index.html
