[package]
name = "chess"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand = "0.8"

[[bin]]
name = "simulate"
path = "src/bin/simulate.rs"

[[bin]]
name = "elo"
path = "src/bin/elo.rs"

[[bin]]
name = "selfplay"
path = "src/bin/selfplay.rs"

[profile.release]
debug = true

